
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int syscallno ;
struct iovec {int* iov_base; int iov_len; } ;
typedef int pid_t ;


 int * NT_ARM_SYSTEM_CALL ;
 int PTRACE_ATTACH ;
 int PTRACE_DETACH ;
 int PTRACE_GETREGSET ;
 int PTRACE_SETREGSET ;
 int PTRACE_SYSCALL ;
 int SIGCONT ;
 int SIGKILL ;
 int __NR_gettid ;
 int __NR_swapon ;
 int err (int,char*) ;
 scalar_t__ errno ;
 int errx (int,char*) ;
 int fork () ;
 int getpid () ;
 int kill (int,int ) ;
 int printf (char*,int,...) ;
 scalar_t__ ptrace (int ,int,int *,struct iovec*) ;
 int setbuf (int ,int *) ;
 int sleep (int) ;
 int stdout ;
 char* strerror (scalar_t__) ;
 int syscall (int,int ,int ) ;
 int waitpid (int,int*,int ) ;

int main(void) {
  setbuf(stdout, ((void*)0));

  pid_t child = fork();
  if (child == -1) err(1, "fork");
  if (child == 0) {
    pid_t my_pid = getpid();
    while (1) {
      errno = 0;
      int res = syscall(__NR_gettid, 0, 0);
      if (res != my_pid) {
        printf("%d (%s)\n", res, strerror(errno));
      }
    }
  }

  sleep(1);

  if (ptrace(PTRACE_ATTACH, child, ((void*)0), ((void*)0))) err(1, "ptrace attach");
  int status;
  if (waitpid(child, &status, 0) != child) err(1, "wait for child");

  if (ptrace(PTRACE_SYSCALL, child, ((void*)0), ((void*)0))) err(1, "ptrace syscall entry");
  if (waitpid(child, &status, 0) != child) err(1, "wait for child");

  int syscallno;
  struct iovec iov = { .iov_base = &syscallno, .iov_len = sizeof(syscallno) };
  if (ptrace(PTRACE_GETREGSET, child, NT_ARM_SYSTEM_CALL, &iov)) err(1, "ptrace getregs");
  printf("seeing syscall %d\n", syscallno);
  if (syscallno != __NR_gettid) errx(1, "not gettid");
  syscallno = __NR_swapon;
  if (ptrace(PTRACE_SETREGSET, child, NT_ARM_SYSTEM_CALL, &iov)) err(1, "ptrace setregs");

  if (ptrace(PTRACE_DETACH, child, ((void*)0), ((void*)0))) err(1, "ptrace syscall");
  kill(child, SIGCONT);
  sleep(5);
  kill(child, SIGKILL);
  return 0;
}
